adjusted width of dialog box to remove awkward spacing issues

--- a/src/custom_components/css/dialog_box.css
+++ b/src/custom_components/css/dialog_box.css
@@ -8,10 +8,6 @@
     font-weight: bold;
 }
 
-#dialog_box .MuiDialog-paper {
-    min-width: 50%;
-}
-
 #dialog_description {
     text-align: center;
 }
